# DeviseConvertor

./: .gitignore  README.md  app.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
static/css/: style_output.css
templates/: index.html
