[tool.poetry]
name = "deviseconvertor"
version = "0.1.0"
description = "Convertisseur des devises"
authors = ["sendervision <sendervision@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
